Update nonce instructions

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ RPC_URL=your_network_rpc_url
 CHAIN_ID=1  # e.g., 1 for Ethereum, 137 for Polygon, 8453 for Base, etc.
 
 # Stuck Transaction Details
-NONCE=123  # The nonce of your stuck transaction (check MetaMask transaction details)
+NONCE=123  # IMPORTANT: Use your last CONFIRMED transaction's nonce + 1
